@@ -12,6 +12,7 @@ v1.9.9
 ! IMDB Search did not work with the localized sites due to new domains used
 ! imdb_person::filmograf did not catch characters if they had no link. Due
   to changes on the IMDB sites, it in fact did no longer catch any character...
++ pilot movie class now correctly assigns the persons IMDBID
 
 v1.9.8 (02.12.2009)
 -------------------
